v 3.0.0.2  alpha 3 fix file reader bug