@@ -1,16 +1,19 @@
 package top.gunplan.netty.impl.propertys;
 
+import top.gunplan.netty.GunBootServerBase;
 import top.gunplan.netty.GunProperty;
 import top.gunplan.netty.common.GunNettyContext;
 import top.gunplan.netty.common.GunNettyStringUtil;
-
 import top.gunplan.utils.GunLogger;
 
+import java.io.IOException;
 import java.lang.reflect.Field;
+import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.Map;
 import java.util.Objects;
+
 import static top.gunplan.utils.NumberUtil.isNumber;
 
 /**
@@ -46,43 +49,46 @@ public class GunGetPropertyFromBaseFile implements GunPropertyStrategy {
     }
 
 
-    private boolean settingProperties0(Map<String, GunProperty> propertyMap, String filename) {
+    private boolean settingProperties0(Map<String, GunProperty> propertyMap, String filename) throws GunBootServerBase.GunNettyCanNotBootException {
         try {
-            byte[] read = Files.readAllBytes(Paths.get(Objects.
-                    requireNonNull(this.getClass().getClassLoader().
-                            getResource(filename)).toURI()));
-            String[] properties = new String(read).split("\n");
-            realAnalyPropertys(properties, propertyMap);
-        } catch (Exception e) {
-            LOG.error("Gun property init fail", "[PROPERTY]");
-            LOG.error(e);
-            return false;
+            String read = Files.readString(Paths.get(Objects.
+                    requireNonNull(this.getClass().getClassLoader().getResource(filename)).toURI()));
+            String[] properties = read.split("\n");
+            realAnalyzingProperties(properties, propertyMap);
+        } catch (NoSuchFieldException | IllegalAccessException | IOException | URISyntaxException e) {
+            throw new GunBootServerBase.GunNettyCanNotBootException(e);
         }
         return true;
     }
 
     @Override
-    public boolean settingProperties(Map<String, GunProperty> propertyMap) {
+    public boolean settingProperties(Map<String, GunProperty> propertyMap) throws GunBootServerBase.GunNettyCanNotBootException {
         return settingProperties0(propertyMap, "GunNetty.conf");
     }
 
-    private void realAnalyPropertys(String[] properties, Map<String, GunProperty> propertiesMap) throws NoSuchFieldException, IllegalAccessException {
-        String[] proname;
+    private void realAnalyzingProperties(String[] properties, Map<String, GunProperty> propertiesMap) throws NoSuchFieldException, IllegalAccessException {
+        String[] proName;
         Field fd;
         for (int now = 0; now < properties.length; now++) {
             if (!properties[now].startsWith(unusefulchars)) {
                 if (properties[now].endsWith(openandclodechildproperties[0])) {
-                    final String prohead = properties[now].replace(openandclodechildproperties[0], "").trim();
-                    final GunProperty obj = propertiesMap.get(prohead);
+                    if (!GunNettyStringUtil.isEmpty0(properties[now])) {
+                        break;
+                    }
+                    final String proHead = properties[now].replace(openandclodechildproperties[0], "").trim();
+                    final GunProperty obj = propertiesMap.get(proHead);
                     now++;
                     for (; now < properties.length; now++) {
+                        if (!GunNettyStringUtil.isEmpty0(properties[now])) {
+                            break;
+                        }
                         if (!properties[now].trim().endsWith(openandclodechildproperties[1])) {
                             if (!properties[now].startsWith(unusefulchars)) {
-                                proname = properties[now].replace(" ", "").split(assignmentchars);
-                                fd = obj.getClass().getDeclaredField(proname[0]);
-                                LOG.info(proname[0] + ":" + proname[1].trim(), "[PROPERTY]");
+                                proName = properties[now].replace(" ", "").split(assignmentchars);
+                                fd = obj.getClass().getDeclaredField(proName[0]);
+                                LOG.info(proName[0] + ":" + proName[1].trim(), "[PROPERTY]");
                                 fd.setAccessible(true);
-                                fd.set(obj, isNumber(proname[1].trim()) ? Integer.valueOf(proname[1].trim()) : proname[1].trim());
+                                fd.set(obj, isNumber(proName[1].trim()) ? Integer.valueOf(proName[1].trim()) : proName[1].trim());
                             }
                         } else {
                             break;
